tests/rosetta/out/Smalltalk/base64-decode-data.out
/workspace/mochi/tests/rosetta/out/Smalltalk/base64-decode-data.st:29: parse error, expected integer literal or floating-point literal or decimal literal
